adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
   <h1>Olá, Mundo!</h1>
   <hr>
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi obcaecati vel quos quae tempora officiis quaerat sequi quibusdam provident adipisci suscipit hic autem laborum quis alias consectetur quo, eaque magni.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, nam sint expedita ut nemo fuga unde dolorem similique, libero possimus provident voluptatem. Omnis nam laudantium ipsum pariatur obcaecati deserunt facere!</p>
 </body>
 </html>
